--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,12 @@ set(CMAKE_CXX_STANDARD 11)
 
 # include header files
 include_directories(include)
+include_directories(deps/Eigen)
 
 # set source files
 set(SOURCE_FILES src/main.cpp src/KalmanFilter.cpp)
 
 # generate executable
 add_executable(KalmanFilter ${SOURCE_FILES})
+
 
